Atualizacao dos exemplos