@@ -36,8 +36,8 @@ public class CreatePayment {
 
         PaymentRequest paymentRequest = new PaymentRequest();
 
-        paymentRequest.addItem("0001", "Notebook ÁÉÍÓÚÇ", Integer.valueOf(1), new BigDecimal("2430.00"),
-                new Long(1000), null);
+        paymentRequest.addItem("0001", "Notebook Lilás", Integer.valueOf(1), new BigDecimal("2430.00"), new Long(1000),
+                null);
         paymentRequest.addItem("0002", "Notebook Rosa", Integer.valueOf(2), new BigDecimal("2560.00"), new Long(750),
                 null);
 
@@ -48,7 +48,7 @@ public class CreatePayment {
 
         paymentRequest.setShippingCost(new BigDecimal("2.02"));
 
-        paymentRequest.setSender("Joao Comprador", "comprador@uol.com.br", "11", "56273440", DocumentType.CPF,
+        paymentRequest.setSender("João Comprador", "comprador@uol.com.br", "11", "56273440", DocumentType.CPF,
                 "000.000.001-91");
 
         paymentRequest.setCurrency(Currency.BRL);
